snapshots/parsers/syntax/library/functions/datetime/day/day_msgbox.snap
---
source: src/syntax/library/functions/datetime/day.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: CallStatement
      children:
        - kind: Identifier
          text: MsgBox
        - kind: Whitespace
          text: " "
        - kind: StringLiteral
          text: "\"Day: \""
        - kind: Whitespace
          text: " "
        - kind: Ampersand
          text: "&"
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Day
        - kind: LeftParenthesis
          text: (
        - kind: Identifier
          text: someDate
        - kind: RightParenthesis
          text: )
        - kind: Newline
          text: "\n"
